semantic/src/test_cases/good/test2.cl
(* Creating a method with name self() is allowed *)

class A {
    self(x : Int) : Bool {
        true
    };
};

class Main {
    main() : Int {
        0
    };
};
