semantic/src/test_cases/bad/test5.cl
(* Creating object of non-existent class *)

class A {
    a : B;
};

class Main {
    main() : Int {
        0
    };
};
